gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nemo-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nemo-recever-gateway
spec:
  hosts:
  - receiver.nemo.com
  gateways:
  - nemo-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: receiver
        subset: v0-1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nemo-identity-gateway
spec:
  hosts:
  - identity.nemo.com
  gateways:
  - nemo-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: identity
        subset: v0-5
